--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,10 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -51,6 +55,13 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.aar', '*.jar'], exclude: [])
     //import kml layer
     implementation 'com.google.maps.android:android-maps-utils:0.5'
+    //Retrofit
+    implementation 'com.squareup.okhttp3:okhttp:3.14.0'
+    // client
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    //json ke coding
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
