change to kotlin

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 28
@@ -68,8 +70,12 @@ dependencies {
 
     //floating sub menu
     implementation 'com.oguzdev:CircularFloatingActionMenu:1.0.2'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
 }
 
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'io.fabric'
+repositories {
+    mavenCentral()
+}
