--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
     }
@@ -28,34 +28,39 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.android.support:support-media-compat:28.0.0'
-    implementation 'com.android.support:mediarouter-v7:28.0.0'
-    implementation 'com.android.support:design:28.0.0'
-    implementation 'com.android.support:palette-v7:28.0.0'
-    implementation 'com.android.support:support-v4:28.0.0'
-    implementation 'com.google.android.gms:play-services-maps:10.2.1'
-    implementation 'com.google.android.gms:play-services:10.2.1'
-    implementation 'com.google.android.gms:play-services-location:10.2.1'
-    implementation 'com.android.support:multidex:1.0.3'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    //firebase
-    implementation 'com.google.firebase:firebase-core:10.2.1'
-    implementation 'com.google.firebase:firebase-database:10.2.1'
-    implementation 'com.google.firebase:firebase-messaging:10.2.1'
-    implementation 'com.h6ah4i.android.widget.verticalseekbar:verticalseekbar:0.7.2'
-    implementation 'com.firebase:geofire-android:2.1.2'
-    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.0'
-    implementation 'com.google.firebase:firebase-messaging:10.2.1'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.media:media:1.0.0'
+    implementation 'androidx.mediarouter:mediarouter:1.0.0'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.palette:palette:1.0.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
-    implementation 'com.android.support:support-v4:+'
-    implementation 'com.android.support:appcompat-v7:+'
-    implementation 'com.google.android.gms:play-services-basement:10.2.1'
-    implementation 'com.google.android.gms:play-services-base:10.2.1'
-    implementation 'com.google.android.gms:play-services-gcm:10.2.1'
+    //play services
+    implementation 'com.google.android.gms:play-services-maps:16.0.0'
+    // implementation 'com.google.android.gms:play-services:10.2.1'
+    implementation 'com.google.android.gms:play-services-location:16.0.0'
+    implementation 'com.google.android.gms:play-services-basement:16.0.0'
+    implementation 'com.google.android.gms:play-services-base:16.0.0'
+    implementation 'com.google.android.gms:play-services-gcm:16.0.0'
+
+    implementation 'androidx.multidex:multidex:2.0.0'
+
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test:runner:1.1.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+    //firebase
+    /* implementation 'com.google.firebase:firebase-core:10.2.1'
+    implementation 'com.google.firebase:firebase-database:10.2.1'
+    implementation 'com.google.firebase:firebase-messaging:10.2.1'*/
+    implementation 'com.h6ah4i.android.widget.verticalseekbar:verticalseekbar:0.7.2'
+/*    implementation 'com.firebase:geofire-android:2.1.2'
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.0'
+    implementation 'com.google.firebase:firebase-messaging:10.2.1'*/
+
+    implementation 'com.android.support:support-v4'
+    implementation 'com.android.support:appcompat-v7'
+
     implementation fileTree(dir: 'libs', include: ['*.aar', '*.jar'], exclude: [])
     //import kml layer
     implementation 'com.google.maps.android:android-maps-utils:0.5'
@@ -72,6 +77,7 @@ dependencies {
     implementation 'com.oguzdev:CircularFloatingActionMenu:1.0.2'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
+    implementation 'com.google.android.libraries.places:places:1.0.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
