--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ android {
 }
 
 dependencies {
+    //androidx
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
@@ -35,9 +36,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.palette:palette:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-  
-
-
     //play services
     implementation 'com.google.android.gms:play-services-maps:16.0.0'
     // implementation 'com.google.android.gms:play-services:10.2.1'
@@ -45,18 +43,14 @@ dependencies {
     implementation 'com.google.android.gms:play-services-basement:16.0.0'
     implementation 'com.google.android.gms:play-services-base:16.0.0'
     implementation 'com.google.android.gms:play-services-gcm:16.0.0'
-
+    //multidex
     implementation 'androidx.multidex:multidex:2.0.0'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
-
+    //seekbar
     implementation 'com.h6ah4i.android.widget.verticalseekbar:verticalseekbar:0.7.2'
-
-
-    implementation 'com.android.support:support-v4'
-    implementation 'com.android.support:appcompat-v7'
 
     implementation fileTree(dir: 'libs', include: ['*.aar', '*.jar'], exclude: [])
     //import kml layer
@@ -75,8 +69,13 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     //SEARCH
-
     implementation 'com.google.android.libraries.places:places:1.0.0'
+
+    //direction
+    implementation 'com.google.android.gms:play-services-maps:16.0.0'
+
+    //GLide
+    implementation 'com.github.bumptech.glide:glide:4.5.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
