--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,6 +81,8 @@ dependencies {
 
     //GLide
     implementation 'com.github.bumptech.glide:glide:4.5.0'
+
+    implementation 'com.firebase:geofire-java:3.0.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
