--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,7 +66,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     //json ke coding
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
-    //volley(cadangan retrofit kamret)
+    //volley
     implementation 'com.android.volley:volley:1.1.1'
 
     //floating sub menu
@@ -82,7 +82,10 @@ dependencies {
     //GLide
     implementation 'com.github.bumptech.glide:glide:4.5.0'
 
+    //firebase
+    implementation 'com.google.firebase:firebase-core:17.0.0'
     implementation 'com.firebase:geofire-java:3.0.0'
+    implementation 'com.google.firebase:firebase-auth:19.0.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
