--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,6 +86,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:17.0.0'
     implementation 'com.firebase:geofire-java:3.0.0'
     implementation 'com.google.firebase:firebase-auth:19.0.0'
+
+    //phone number
+    implementation 'io.michaelrocks:libphonenumber-android:8.8.5'
+
+    //implementation 'com.github.joielechong:countrycodepicker:2.1.5'
 }
 
 apply plugin: 'com.google.gms.google-services'
