--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.palette:palette:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    //preference Setting
+    implementation 'androidx.preference:preference:1.0.0-rc02'
     //play services
     implementation 'com.google.android.gms:play-services-maps:16.0.0'
     // implementation 'com.google.android.gms:play-services:10.2.1'
